--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   height: 500px;
   width: 80%;
   margin-top: 32px;
+  /* margin: 0px;
+  padding: 0px; */
 }
 #map,
 html,
@@ -36,6 +38,22 @@ body {
   margin-top: 5px;
 }
 
+/* #pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 2px solid #eee;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  text-overflow: ellipsis;
+  width: 400px;
+} */
+
 #pac-input {
   background-color: #fff;
   font-family: Roboto;
@@ -43,10 +61,23 @@ body {
   font-weight: 300;
   margin-left: 12px;
   padding: 0 11px 0 13px;
+  margin: 5px;
+  /* padding: 10px;
+  margin: 10px 0;
+  border: 2px solid #eee;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 10px; */
   text-overflow: ellipsis;
   width: 400px;
+  height: 25px;
+  border: 2px solid #eee;
 }
 
 #pac-input:focus {
   border-color: #4d90fe;
+}
+
+#input-div {
+  display: flex;
+  justify-content: center;
 }
